# hls_lfcd_lds_driver

./: CHANGELOG.rst  CMakeLists.txt  package.xml
include/: Device.h  FirstGenLaser.hpp  OnePointFiveGenLaser.hpp  SecondGenLaser.hpp  YDLidar.hpp
include/hls_lfcd_lds_driver/: OnePointFiveGenLaser.hpp  SecondGenLaser.hpp  lfcd_laser.h  main.hpp
include/ydlidar-sdk/: CYdLidar.h  angles.h  common.h  ydlidar_protocol.h
launch/: hlds_laser.launch  hlds_laser_segment.launch  view_hlds_laser_segment_publisher.launch  ydlidar.launch
msg/: scan_ctrl.msg
src/: hlds_laser_publisher.cpp  hlds_laser_segment_publisher.cpp  main.cpp
src/dev/: CYdLidar.cpp  Device.cpp  LFCDLaser.cpp  LFCDLaserFirstGen.cpp  LFCDLaserSecondGen.cpp  YDLidar.cpp
src/ydlidar-sdk/: ydlidar_driver.cpp
src/ydlidar-sdk/impl/unix/: unix_serial.cpp
srv/: SetLidar.srv
